# DPI-MFSA-BFPArena

./: .clang-format  .env.example  .gitignore  .gitmodules  CMakeLists.txt  README.md  STYLEGUIDE.md
cmake/: BpfObject.cmake
docs/: architecture.md  arena-layout.md  bugs-and-findings.md
perf_tests/: CMakeLists.txt  bench_arena_stress.c  bench_arena_throughput.c  bench_fuzz.c  bench_large_scale.c  bench_mfsa.c  bench_multi_dfa.c  bench_pcap.c  bench_real_rules.c  bench_single_dfa.c  bench_stress.c  build_perf.sh  gen_traffic.py  plot.py  run_perf.py
scripts/: aws_create.sh  aws_kill.sh  bench_gbps.sh  bootstrap.sh  build.sh  build_and_test.sh  enable_pre_commit_hook.sh  format.sh  gen_pcaps.py  run.sh  run_full_bench.sh  sender_listener.sh  setup.sh  test.sh  test_xdp.sh  trigger_bench.sh
src/common/: zdpi_defs.h  zdpi_types.h
src/control/: CMakeLists.txt
src/control/include/: ac.h  arena_flash.h  dfa.h  ec_compress.h  linearize.h  mfsa.h  nfa.h  regex_parser.h  rule_parser.h  zdpi_log.h
src/control/src/: ac.c  arena_flash.c  dfa.c  ec_compress.c  linearize.c  main.c  mfsa.c  nfa.c  regex_parser.c  rule_parser.c  zdpi_log.c
src/dataplane/: CMakeLists.txt  zdpi_kern.bpf.c
tests/: CMakeLists.txt
tests/include/: stub_arena.h  test_dfa.h  test_ec_compress.h  test_linearize.h  test_mfsa.h  test_nfa.h  test_regex_parser.h
tests/rules/: content_sample.rules  et_100.rules  et_1000.rules  et_200.rules  et_300.rules  et_500.rules  et_750.rules  multi.rules  single.rules  snort_sample.rules  stress_v4.rules
tests/src/: bootstrap_test.cpp  test_ac.cpp  test_dfa.cpp  test_e2e.cpp  test_ec_compress.cpp  test_linearize.cpp  test_mfsa.cpp  test_nfa.cpp  test_regex_parser.cpp
